:sparkles: feat: configuração inicial do firebase e upload de imagem